Core: Support manifest DVs in V4ManifestReader.